<resources>
    <string name="app_name">KuyuWalltay</string>
    <string name="textViewNombre">Nombre</string>
    <string name="textViewApellido">Apellido</string>
    <string name="textViewEmail">Correo</string>
    <string name="textViewContraseña">Contraseña</string>
    <string name="textViewRepetirContraseña">Repetir Contraseña</string>
    <string name="btnRegistrar">REGISTRARSE</string>
    <string name="btnIngresar">INGRESAR</string>
    <string name="editTextNombre">Ingrese su Nombre</string>
    <string name="textViewNombreApp">KUYU WALLTAY</string>
    <string name="compartir">Compartir</string>
    <string name="textViewAccionPelicula">Peliculas de Accion</string>
    <string name="textViewVerMas">Ver más...</string>
    <string name="textViewAnimadaPeliculas">Peliculas Animadas</string>
    <string name="textView2">Pokemon La Pelicula</string>
    <string name="textView">La Sirenita</string>
    <string name="textView3">Toy Story I</string>
    <string name="textView4">El Rey Leon</string>
    <string name="textView5">La Bella y La Bestia</string>
    <string name="textView6">Turbo</string>
    <string name="btnActualizarReg">ACTUALIZAR</string>
    <string name="textViewNombreCinemark">Cinemark</string>
    <string name="textViewNombreMulticines">Multicines</string>
    <string name="textViewNombreSuperCines">SuperCines</string>
    <string name="textViewCabecera">Menú Principal</string>
    <string name="textViewPeliculas">Lista de Peliculas</string>
    <string name="textViewCines">Lista de  Cines</string>
    <string name="textViewMapa">Mapa de Quito</string>
    <string name="textViewDescripcion">DESCRIPCION</string>
    <string name="textViewIdUsuario">IdUsuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="textViewDirCinemark">Avenida de las Américas y Avenida Naciones Unidas. Plaza Las Américas</string>
    <string name="textViewDirMulticines">"Avenida Amazonas y Naciones Unidas. Centro Comecial Iñaquito "</string>
    <string name="textViewDirSuperCines">Av. 6 de Diciembre y German Aleman</string>
    <string name="textViewNombrePelicula">Pokemon La Pelicula</string>
    <string name="textViewPrecioPelicula">2</string>
    <string name="textViewDescripcionPelicula">Ash y sus compañeros Pokémon se enfrentan a una criatura clonada que le ha declarado la guerra a sus oponentes.</string>
</resources>
