<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActulizarDatosUssActivity">

    <TextView
        android:id="@+id/textViewRepetirContraseña"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:text="@string/textViewRepetirContraseña"
        app:layout_constraintStart_toStartOf="@+id/textViewContraseña"
        app:layout_constraintTop_toBottomOf="@+id/textViewContraseña" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="118dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_palomitas_de_maiz"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textViewNombreApp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewNombreCine1"
        android:layout_width="85dp"
        android:layout_height="27dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:text="@string/textViewNombre"
        app:layout_constraintEnd_toStartOf="@+id/editTextNombre"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIdUsuario"
        android:layout_width="85dp"
        android:layout_height="27dp"
        android:text="@string/textViewIdUsuario"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/editTextIdUsuario"
        app:layout_constraintEnd_toEndOf="@+id/textViewRepetirContraseña"
        app:layout_constraintStart_toStartOf="@+id/textViewRepetirContraseña"
        app:layout_constraintTop_toTopOf="@+id/editTextIdUsuario" />

    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:text="@string/textViewApellido"
        app:layout_constraintStart_toStartOf="@+id/textViewNombreCine1"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreCine1" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="82dp"
        android:layout_height="23dp"
        android:layout_marginTop="35dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:text="@string/textViewEmail"
        app:layout_constraintStart_toStartOf="@+id/textViewApellido"
        app:layout_constraintTop_toBottomOf="@+id/textViewApellido" />

    <TextView
        android:id="@+id/textViewContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:text="@string/textViewContraseña"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="237dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/textViewNombreCine1"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewApellido"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="239dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextApellido"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="234dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewContraseña"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <EditText
        android:id="@+id/editTextRepContraseña"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextContraseña"
        app:layout_constraintStart_toEndOf="@+id/textViewRepetirContraseña"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />

    <Button
        android:id="@+id/btnActualizarReg"
        android:layout_width="198dp"
        android:layout_height="41dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/btnActualizarReg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepContraseña"
        app:layout_constraintVertical_bias="0.484" />

    <EditText
        android:id="@+id/editTextIdUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editTextRepContraseña"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRepContraseña"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepContraseña" />

</androidx.constraintlayout.widget.ConstraintLayout>