<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaPelisActivity">

    <ImageView
        android:id="@+id/imagen3"
        android:layout_width="69dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_palomitas_de_maiz"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/textViewNombreApp"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@+id/imagen3"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="413dp"
        android:layout_height="609dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="304dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="322dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:background="#FFFFFF"
                        android:scaleType="fitCenter"
                        android:onClick="onClickButtonListaPelis"
                        app:srcCompat="@drawable/img2" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/textView2"
                        android:textColor="#F00721C3"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="138dp"
                    android:layout_height="323dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="260dp"
                        android:scaleType="fitCenter"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/lasirenita" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/textView"
                        android:textColor="#F00721C3"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="325dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="260dp"
                        android:scaleType="fitCenter"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/toystory" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/textView3"
                        android:textColor="#F00721C3"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="322dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="256dp"
                        android:scaleType="fitCenter"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/reyleon" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/textView4"
                        android:textColor="#F00721C3"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="138dp"
                    android:layout_height="323dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="256dp"
                        android:scaleType="fitCenter"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/labellaylabestia" />

                    <TextView
                        android:id="@+id/textViewPrecioPelicula"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/textView5"
                        android:textColor="#F00721C3"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="325dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="256dp"
                        android:scaleType="fitCenter"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/turbo" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/textView6"
                        android:textColor="#F00721C3"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>