<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="2dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imagen1"
        android:layout_width="336dp"
        android:layout_height="123dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="573dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431"
        app:srcCompat="@drawable/ic_palomitas_de_maiz"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewNombreApp"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_marginTop="50dp"
        android:text="@string/textViewNombreApp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imagen1"
        app:layout_constraintStart_toStartOf="@+id/imagen1"
        app:layout_constraintTop_toBottomOf="@+id/imagen1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="Usuario/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/imagen1"
        app:layout_constraintStart_toStartOf="@+id/imagen1"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreApp"
        android:drawableLeft="@drawable/ic_baseline_person_24"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"/>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="231dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:text="@string/btnIngresar"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/btnIngresar"
        app:layout_constraintStart_toStartOf="@+id/btnIngresar"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

</androidx.constraintlayout.widget.ConstraintLayout>