<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/buttonListPeliculas"
        android:layout_width="176dp"
        android:layout_height="160dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/ic_reproductor_de_video"
        android:onClick="onClickButtonPeliculas"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCines"
        android:layout_width="176dp"
        android:layout_height="160dp"
        android:background="@drawable/ic_cine"
        android:onClick="onClickButtonCines"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/buttonListPeliculas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/buttonListPeliculas"
        app:layout_constraintTop_toTopOf="@+id/buttonListPeliculas"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonMapa"
        android:layout_width="179dp"
        android:layout_height="182dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/ic_mapa"
        android:onClick="onClickButtonMapa"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonPerfilUser"
        app:layout_constraintEnd_toEndOf="@+id/buttonCines"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/buttonListPeliculas"
        app:layout_constraintTop_toBottomOf="@+id/buttonListPeliculas"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textViewPeliculas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewPeliculas"
        android:textAlignment="center"
        android:textColor="?android:attr/colorForeground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonListPeliculas"
        app:layout_constraintEnd_toEndOf="@+id/buttonListPeliculas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonListPeliculas" />

    <TextView
        android:id="@+id/textViewCines"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewCines"
        android:textAlignment="center"
        android:textColor="?android:attr/colorForeground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCines"
        app:layout_constraintEnd_toEndOf="@+id/buttonCines"
        app:layout_constraintStart_toStartOf="@+id/buttonCines" />

    <TextView
        android:id="@+id/textViewMapa"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/textViewMapa"
        android:textAlignment="center"
        android:textColor="?android:attr/colorForeground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMapa"
        app:layout_constraintEnd_toEndOf="@+id/buttonMapa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonMapa" />

    <ImageButton
        android:id="@+id/imageButtonPerfilUser"
        android:layout_width="63dp"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:onClick="onClickButtonModificarDatos"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_editar"
        tools:ignore="OnClick,VectorDrawableCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>
